@@ -1,3 +1,8 @@
+2007-08-06  Denis Ovsienko
+
+	* zebra_rib.c: (general) Add extra debug logging for RIB and
+	  RIB queue.
+
 2007-08-02  Denis Ovsienko
 
 	* rt_socket.c (kernel_rtm_ipv4): Only call rtm_write when changes
